# fly-sccache

./: .gitignore  .gitmodules  build-container  container.dockerfile  fly.toml  start-worker
client/: Cargo.toml
client/src/: machines.rs  main.rs
worker/: Cargo.toml
worker/src/: main.rs
